<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LACC</string>
    <string name="app_logo">LACC Logo</string>
    <string name="app_full_name">Legal Aid and Consultancy Center</string>
    <string name="splash_select_label">Please select language to proceed.</string>
    <string name="button_english">English</string>
    <string name="button_nepali">नेपाली</string>
    <string name="text_nepali_en">Nepali</string>
    <string name="text_a_np">अ</string>
    <string name="text_a_en">A</string>
    <string name="select_language_en">Select Language</string>
    <string name="select_language_np">भाषा चयन गर्नुहोस</string>
    <string name="read_heading">एल.ए.सी.सी नेपाल</string>
    <string name="read_first_text_view">संविधानमा भएका महिलासंग सम्बन्धित व्यवस्थाहरु</string>
    <string name="text_continue">Continue</string>
    <string name="settings_heading">Settings</string>
    <string name="settings_account">Account</string>
    <string name="onboard_heading_first">All Law Information</string>
    <string name="onboard_content_first">Provisions related to women, legal identity, birth and citizenship, polygamy and child marriage, etc.</string>
    <string name="onboard_heading_second">Queston &amp; Answer</string>
    <string name="onboard_content_second">User can ask question and get appropriate answers from LACC support teams.</string>
    <string name="onboard_heading_third">Chat</string>
    <string name="onboard_content_third">LACC reply the queries of user instantly by chat support</string>
    <string name="next_button">Next</string>
    <string name="start_button">Start</string>
    <string name="lacc_nepal">LACC Nepal</string>
    <string name="signup_button">Create Account</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="login_button">Login</string>
    <string name="lacc_description">Legal Aid and Consultancy Centre (LACC), established in 1987, is an independent non-governmental organization (NGO), Working to End all forms of Discrimination &amp; Violence against Women &amp; Children</string>
    <string name="sign_up">Sign Up with Mobile Number</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="already_account">Already have account? <font color='#01009A'> <u>Log In</u></font></string>
    <string name="new_signup">New to LACC Nepal? <font color='#01009A'> <u>Sign Up</u></font></string>
    <string name="verification_code_resend">Did not Receive! <font color='#01009A'> <u> Resend</u></font></string>
    <string name="sign_up_heading">Please provide your <b>information.</b></string>
    <string name="verification_code_heading">Please enter Code below</string>
    <string name="phone_code_request_heading">Please enter your phone number</string>
    <string name="settings_edit_profile">Edit Profile</string>
    <string name="settings_interface">Interface</string>
    <string name="settings_bookmark">Bookmarked Posts</string>
    <string name="settings_language">Language</string>
    <string name="settings_language_english">English</string>
    <string name="settings_notification">Notification</string>
    <string name="settings_dark_mode">Dark Mode</string>
    <string name="settings_support">Support</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="privacy">Privacy Policy</string>
    <string name="terms">Terms &amp; Conditions </string>
    <string name="logout">Logout</string>


    <string name="phone_code_request_button">Send Code</string>
    <string name="full_name_hint">Enter your Full Name</string>
    <string name="phone_number_hint">Enter your Phone Number</string>
    <string name="password_hint">Password</string>
    <string name="nav_home">Feed</string>
    <string name="nav_read">Read</string>
    <string name="nav_setting">Setting</string>
    <string name="lacc"> LACC </string>
    <string name="home_edit_text_hint">Type your question here.</string>
    <string name="recent_questions">Recent questions</string>
    <string name="cancel">Cancel</string>
    <string name="post">Post</string>

    <!-- strings.xml -->
    <string name="what_do_you">

What do you want to
        ask?
</string>


    <string name="no">No Questions asked.</string>

    <string name="be">Be the first one to ask question.</string>

    <string name="noNotificationYet">No Notification yet.</string>

    <string name="youWillFindNotificationhere">You will find your notifications here about the questions you have asked, and other information.</string>

    <string name="noMessageYet" translatable="false" tools:ignore="DuplicateDefinition">No Message yet.</string>

    <string name="weRequestYouToPost" translatable="false" tools:ignore="DuplicateDefinition">We request to post question firstly on the question and answer page, so that most people find their answer publicly.</string>

    <string name="registerPlease" translatable="false" tools:ignore="DuplicateDefinition">Register, Please.</string>

    <string name="itIsMandatory" translatable="false" tools:ignore="DuplicateDefinition">It is mandatory to register your account to start chat. </string>

    <string name="writeYourMessagehere" translatable="false" tools:ignore="DuplicateDefinition">Write your message here...</string>

    <string name="chat" translatable="false" tools:ignore="DuplicateDefinition">Chat</string>

    <string name="notification" translatable="false" tools:ignore="DuplicateDefinition">Notification</string>

    <string name="bookmarked" translatable="false" tools:ignore="DuplicateDefinition">Bookmarked</string>

    <string name="bookmarkBack" translatable="false" tools:ignore="DuplicateDefinition">Back</string>

    <string name="editProfile" translatable="false" tools:ignore="DuplicateDefinition">Edit Profile</string>

    <string name="editProfileChangeBtn" translatable="false" tools:ignore="DuplicateDefinition">Change</string>

    <string name="searchContent" translatable="false" tools:ignore="DuplicateDefinition">Search content ...</string>

    <string name="read" translatable="false" tools:ignore="DuplicateDefinition">Read</string>

    <string name="lawReadDetailsTitle" translatable="false" tools:ignore="DuplicateDefinition">संविधान</string>

    <string name="nav_content" translatable="false" tools:ignore="DuplicateDefinition">Content</string>

    <string name="nav_play" translatable="false" tools:ignore="DuplicateDefinition">Play</string>

    <string name="nav_manage" translatable="false" tools:ignore="DuplicateDefinition">Manage</string>

    <string name="nav_like" translatable="false" tools:ignore="DuplicateDefinition">Like</string>

    <string name="nav_share" translatable="false" tools:ignore="DuplicateDefinition">Share</string>

    <string name="nav_bookmark" translatable="false" tools:ignore="DuplicateDefinition">Bookmark</string>


</resources>