<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".PhoneCodeRequestActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/phone_code_heading"
            android:layout_width="311dp"
            android:layout_height="92dp"
            android:layout_marginTop="84dp"
            android:fontFamily="@font/inter_regular"
            android:gravity="center_vertical"
            android:letterSpacing="-0.01"
            android:lineSpacingExtra="5sp"
            android:text="@string/phone_code_request_heading"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </TextView>

        <EditText
            android:id="@+id/phone_code_edit_text_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="86dp"
            android:alpha="0.5"
            android:ems="10"
            android:fontFamily="@font/inter_semi_bold"
            android:hint="@string/phone_number_hint"
            android:inputType="phone"
            android:textColor="@color/primary_black"
            android:textColorHint="@color/sign_up_back_text"
            android:textSize="17sp"
            android:theme="@style/MyEditTextTheme"
            app:layout_constraintEnd_toEndOf="@+id/phone_code_heading"
            app:layout_constraintStart_toStartOf="@+id/phone_code_heading"
            app:layout_constraintTop_toBottomOf="@+id/phone_code_heading" />

        <Button
            android:id="@+id/phone_code_button"
            android:layout_width="311dp"
            android:layout_height="46dp"
            android:layout_marginTop="45dp"
            app:layout_constraintEnd_toEndOf="@+id/phone_code_edit_text_phone"
            app:layout_constraintStart_toStartOf="@+id/phone_code_edit_text_phone"
            app:layout_constraintTop_toBottomOf="@+id/phone_code_edit_text_phone"
            android:text="@string/phone_code_request_button"
            android:background="@drawable/button_background">
        </Button>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
